# emr_runner

./: .gitignore  Dockerfile  docker-compose.yml  emr_runner.py  pyproject.toml  run.sh  start-spark.sh
src/: emr_runner.py  test_spark_app.py
src/dao/: dynamodb.py
src/utils/: add_message_to_sqs.py  cloud_watch_logger.py  cloud_watch_metrics.py  ge.py  handle_results.py  schema.py
