[tool.poetry]
name = "dq-broker-library"
version = "0.0.4"
description = ""
authors = ["Emmanuel Davidson <emmanuel.davidson@thejitu.com>"]

[tool.poetry.scripts]
dq-broker-library = 'dq_broker_library.cli:dq_broker_library'

[tool.poetry.dependencies]
python = "^3.7"
altair = "^4.0.0"
Click = "^7.1.2"
colorama = "^0.4.3"
importlib-metadata = "^1.7.0" 
Ipython = "^7.16.3"
jinja2 = "^2.10"
jsonpatch = "^1.22"
jsonschema = "^2.5.1"
mistune = "=0.8.4"
numpy = "=1.18.1"
pandas = "=1.0.1"
pyparsing = "=2.4.6"
python_dateutil = "=2.8.1"
pytz = "=2019.3"
requests  = "^2.20"
scipy = "=1.4.1"
termcolor = "^1.1.0"
tqdm = "^4.59.0"
typing-extensions = "^3.10.0.0"
tzlocal = "^1.2"
urllib3 = "=1.25.8"
great-expectations = "^0.14.10"
packaging = "^21.3"
markupsafe = "=2.0.1"
pyspark = "=3.1.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
